Add Discord to the website

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ Most of the project (including this site) is in an incomplete state.
 					</p>
 					<ul>
 						<li>
+							Join the community here:
+							<a href="https://discord.gg/Jb6mU6XgVr">Discord</a>
+						</li>
+						<li>
 							You can follow development here:
 							<a href="https://github.com/make-adelaide/make-adelaide-repo">Github repo</a>
 						</li>
