Update the link to the Github to be to the organisation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Most of the project (including this site) is in an incomplete state.
 						</li>
 						<li>
 							You can follow development here:
-							<a href="https://github.com/make-adelaide/make-adelaide-repo">Github repo</a>
+							<a href="https://github.com/make-adelaide">Github repo</a>
 						</li>
 						<li>
 							You can join the Meetup group here:
