--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Make Adelaide</title>
+		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<div class="v">
@@ -32,13 +33,22 @@ Most of the project (including this site) is in an incomplete state.
 						</li>
 					</ul>
 					<p>
-<b>The future will not be incorporated.</b>
+The future will not be incorporated.
 					</p>
 				</div>
 			</div>
 		</div>
 	</body>
 	<style>
+* {
+	font-family: "Cormorant Garamond", sans-serif;
+}
+
+p, li, ul {
+	font-size: 18px;
+	font-weight: 600;
+}
+
 body, html {
 	margin: 0;
 	padding: 0;
