--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Make Adelaide</title>
 		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&display=swap" rel="stylesheet" />
+		 <meta name="viewport" content="width=device-width, initial-scale=1" />
 	</head>
 	<body>
 		<div class="v">
@@ -11,9 +12,9 @@
 					<img src="/logo.png" />
 					<p>
 Make Adelaide promotes and informs the entrepreneurship community of
-Adelaide with events, news, interviews and publicly accessible
-prediction markets. The organisation is run trustlessly as a DAO and
-advances protocol-driven entrepreneurship.
+Adelaide with events, news, interviews and prediction markets. The
+organisation is run trustlessly as a DAO and advances protocol-driven
+entrepreneurship.
 					</p>
 					<p>
 Most of the project (including this site) is in an incomplete state.
@@ -77,10 +78,12 @@ body {
 .b {
 	display: block;
 	max-width: 500px;
+	width: 80%
 }
 
 img {
 	width: 400px;
+	max-width: 90%
 }
 	</style>
 </html>
