Tighten up the language

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 					<img src="/logo.png" />
 					<p>
 Make Adelaide promotes and informs the entrepreneurship community of
-Adelaide with events, news, interviews and prediction markets. The
-organisation is run trustlessly as a DAO and advances protocol-driven
-entrepreneurship.
+Adelaide with events, access to people, education opportunities and
+prediction markets The organisation is run trustlessly as a DAO and
+advances protocol-driven entrepreneurship.
 					</p>
 					<p>
-Most of the project (including this site) is in an incomplete state.
+This site is currently in a WIP state, you can read the Github for
+more info.
 					</p>
 					<ul>
 						<li>
