--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<p>
 Make Adelaide promotes and informs the entrepreneurship community of
 Adelaide with events, access to people, education opportunities and
-prediction markets The organisation is run trustlessly as a DAO and
+prediction markets. The organisation is run trustlessly as a DAO and
 advances protocol-driven entrepreneurship.
 					</p>
 					<p>
